add reporting widget

--- a/site/lk-new.html
+++ b/site/lk-new.html
@@ -949,7 +949,7 @@
                 </div>
               </div>
             </div>
-            <div class="box-interest box-interest_novisual">
+            <div class="box-interest box-interest_novisual mar-bot-20">
               <div class="bname">
                 <h3>Рекомендуемые организации</h3>
               </div>
@@ -1450,6 +1450,56 @@
                                       </div>
                                     </div>
                 </div>
+              </div>
+            </div>
+            <div class="box-info-one">
+              <div class="bname">
+                <h3> <a href="#">Отчетность</a></h3>
+              </div>
+              <div class="bcon">
+                <div class="reporting-line reporting-line_names">
+                  <div class="reporting-item reporting_num">№</div>
+                  <div class="reporting-item reporting_name">Название</div>
+                  <div class="reporting-item reporting_time">Срок</div>
+                  <div class="reporting-item reporting_status">Статус</div>
+                </div>
+                                <div class="reporting-line">
+                                  <div class="reporting-item reporting_num">1</div>
+                                  <div class="reporting-item reporting_name">Государственная поддержка</div>
+                                  <div class="reporting-item reporting_time">до 10.12.2014</div>
+                                  <div class="reporting-item reporting_status"><a href="#" class="link-plus">Добавить</a></div>
+                                </div>
+                                <div class="reporting-line">
+                                  <div class="reporting-item reporting_num">2</div>
+                                  <div class="reporting-item reporting_name">Источники и структура выручки</div>
+                                  <div class="reporting-item reporting_time">до 10.12.2014</div>
+                                  <div class="reporting-item reporting_status"><a href="#" class="link-plus">Добавить</a></div>
+                                </div>
+                                <div class="reporting-line">
+                                  <div class="reporting-item reporting_num">3</div>
+                                  <div class="reporting-item reporting_name">Дебиторская задолженность</div>
+                                  <div class="reporting-item reporting_time">до 10.12.2014</div>
+                                  <div class="reporting-item reporting_status"><a href="#" class="link-plus">Добавить</a></div>
+                                </div>
+                                <div class="reporting-line">
+                                  <div class="reporting-item reporting_num">4</div>
+                                  <div class="reporting-item reporting_name">Долговые обязательства</div>
+                                  <div class="reporting-item reporting_time">до 10.12.2014</div>
+                                  <div class="reporting-item reporting_status"><a href="#" class="link-plus">Добавить</a></div>
+                                </div>
+                                <div class="reporting-line">
+                                  <div class="reporting-item reporting_num">5</div>
+                                  <div class="reporting-item reporting_name">Сведения о персонале</div>
+                                  <div class="reporting-item reporting_time">до 10.12.2014</div>
+                                  <div class="reporting-item reporting_status"><a href="#" class="link-plus">Добавить</a></div>
+                                </div>
+                <div class="reporting-line">
+                  <div class="reporting-item reporting_num">6</div>
+                  <div class="reporting-item reporting_name">Государственная поддержка</div>
+                  <div class="reporting-item reporting_time">до 10.12.2014</div>
+                  <div class="reporting-item reporting_status"><a href="#" class="link-edit">Изменить</a><a href="#" class="ok"></a></div>
+                </div>
+                <div class="all_full"><a href="#">Все документы</a></div>
               </div>
             </div>
           </div>
