--- a/site/tables.html
+++ b/site/tables.html
@@ -433,7 +433,7 @@
               <div class="kir">
                 <div class="kir__col kir__col_wide"> </div>
                 <div class="kir__col kir__col_med"> 
-                  <div class="kir__name">Внутренний рынок </div>
+                  <div class="kir__name">Гоз</div>
                 </div>
                 <div class="kir__col kir__col_med">
                   <div class="kir__name">Внешний рынок</div>
@@ -458,6 +458,7 @@
                 </div>
               </div>
             </div>
+            <div class="mar-top-20 center"><a href="#" class="btn-grey-wide inline">Отмена</a><a href="#" class="btn-orange-wide inline">Сохранить</a></div>
           </div>
         </div>
         <footer>
