--- a/site/search.html
+++ b/site/search.html
@@ -413,6 +413,10 @@
               </div>
               <div class="form-filter-2">
                 <h4>В разделах <a href="#">(4)</a></h4>
+                <div class="mar-bot-20">
+                  <input id="select-all" type="checkbox" name="radio">
+                  <label for="select-all">Выбрать все разделы</label>
+                </div>
                 <div class="col">
                   <input id="analytic-article" type="checkbox" name="radio">
                   <label for="analytic-article">Аналитические статьи</label>
