--- a/site/table-3.html
+++ b/site/table-3.html
@@ -15,12 +15,14 @@
     <link href="css/sweet-alert.css" rel="stylesheet">
     <link href="css/lightbox.css" rel="stylesheet">
     <link href="css/jquery.remodal.css" rel="stylesheet">
+    <link href="css/lightSlider.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     <script src="js/lightbox.min.js" type="text/javascript"></script>
     <script src="js/jquery.remodal.js" type="text/javascript"></script>
+    <script src="js/jquery.lightSlider.min.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
   <body>
@@ -395,7 +397,7 @@
           <div class="page-name page-name_small">
             <h1>Структура дебиторской задолженности</h1>
           </div>
-          <div class="main-full">
+          <div class="main-left">
             <div class="box-articles mar-bot-20">
               <div class="heading heading_normal">Займы (млн. руб.)</div>
               <div class="kir-table">
@@ -755,6 +757,87 @@
               </div>
             </div>
             <div class="mar-top-20 center"><a href="#" class="btn-grey-wide inline">Отмена</a><a href="#" class="btn-orange-wide inline">Сохранить</a></div>
+          </div>
+          <div class="main-right">
+            <div class="box-right boxside-list">
+              <div class="bname">
+                <h3><a href="#">Архив отчетов</a></h3>
+              </div>
+              <div class="bcon">
+                <div class="js-archive-slider">
+                  <div class="slide">
+                    <ul>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                      <li class="center">Сентября 2014</li>
+                    </ul>
+                  </div>
+                  <div class="slide">
+                    <ul>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                                <li>
+                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                                </li>
+                      <li class="center">Октябрь 2014</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <footer>
