--- a/site/reports.html
+++ b/site/reports.html
@@ -32,11 +32,11 @@
         <div class="logo"><a href="main.html"> </a></div>
         <div class="menu">
           <ul>
-            <li class="home"><a href="#" data-menu="home">Рынок услуг</a></li>
-            <li class="info"><a href="#" data-menu="info">Информация</a></li>
-            <li class="events"><a href="#" data-menu="events">События</a></li>
-            <li class="talks"><a href="#" data-menu="home">Обсуждения</a></li>
-            <li class="search"><a href="docs.html">Поиск</a></li>
+            <li class="home"><a href="#" data-menu="home">Главная</a></li>
+            <li class="info"><a href="#" data-menu="info">Новости</a></li>
+            <li class="events"><a href="#" data-menu="events">Системно-<br>образующие<br>предприятия</a></li>
+            <li class="talks"><a href="#" data-menu="home">Документы</a></li>
+            <li class="search"><a href="docs.html">Личный кабинет</a></li>
           </ul>
         </div>
         <div class="side-extend-fix"></div>
