--- a/site/main.html
+++ b/site/main.html
@@ -39,6 +39,7 @@
             <li class="search"><a href="docs.html">Личный кабинет</a></li>
           </ul>
         </div>
+        <div class="logo-bot"></div>
         <div class="side-extend-fix"></div>
         <div data-menu="home" class="side-extend">
           <div class="bname">
