add search on docs page

--- a/site/docs.html
+++ b/site/docs.html
@@ -401,6 +401,12 @@
             <p>Свидетельства о государственной регистрации и патенты</p>
           </div>
           <div class="main-left">
+            <div class="search-con">
+              <form action="#">
+                <input type="text" placeholder="Быстрый поиск по документам" class="inp-text">
+                <input type="submit" value="" class="inp-submit">
+              </form>
+            </div>
             <div class="box-docs">
               <div class="item">
                 <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
