upd archive widget

--- a/site/table-5.html
+++ b/site/table-5.html
@@ -479,72 +479,60 @@
                 <div class="js-archive-slider">
                   <div class="slide">
                     <ul>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                      <li class="center">Сентября 2014</li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="fault">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="fault">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="fault">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                      <li class="last">Сентября 2014</li>
                     </ul>
                   </div>
                   <div class="slide">
                     <ul>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                                <li>
-                                  <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                                </li>
-                      <li class="center">Октябрь 2014</li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="fault">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="fault">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                            <li class="ok">
+                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
+                            </li>
+                      <li class="last">Октябрь 2014</li>
                     </ul>
                   </div>
                 </div>
