upd pages table

--- a/site/table-1.html
+++ b/site/table-1.html
@@ -929,7 +929,6 @@
                         <div class="mar-bot-20"></div>
               </div>
             </div>
-            <div class="mar-top-20 center"><a href="#" class="btn-grey-wide inline">Отмена</a><a href="#" class="btn-orange-wide inline">Сохранить</a></div>
           </div>
           <div class="main-right">
             <div class="box-right boxside-list">
@@ -981,12 +980,6 @@
                             <li class="fault">
                               <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
                             </li>
-                            <li class="ok">
-                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                            </li>
-                            <li class="ok">
-                              <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
-                            </li>
                             <li class="fault">
                               <div class="small-grey">30 Сентября 2014</div><a href="#">Отчет №2</a>
                             </li>
@@ -1000,6 +993,7 @@
               </div>
             </div>
           </div>
+          <div class="mar-top-20 center"><a href="#" class="btn-grey-wide inline">Отмена</a><a href="#" class="btn-orange-wide inline">Сохранить</a><a href="#" class="btn-orange-wide inline">Опубликовать</a></div>
         </div>
         <footer>
           <div class="main-width">
