--- a/site/news-2.html
+++ b/site/news-2.html
@@ -24,8 +24,29 @@
     <script src="js/jquery.remodal.js" type="text/javascript"></script>
     <script src="js/jquery.datetimepicker.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
+    <script src="js/functions.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body><!--[if lte IE 8]>
+    <script type="text/javascript">
+      $(document).ready(function() {
+      	var remodalIEError = $.remodal.lookup[$('[data-remodal-id=error-ie]').data('remodal')];
+      	remodalIEError.open();
+      });
+    </script><![endif]-->
+    <div data-remodal-id="error-ie" class="remodal">
+      <div class="popup-error">
+        <h3 class="center refusal-name">Версия браузера</h3>
+        <p>Уважаемый пользователь, уведомляем Вас, <br> что ваша версия браузера не поддерживается системой. Просьба ипользовать IE9 версии и <br> выше и аналогичные версии других браузеров. <br> Вы можете продолжить использование</p>
+        <div class="center"><a href="#" class="btn-orange-wide inline remodal-ok">Продолжить</a></div>
+      </div>
+    </div>
+    <div data-remodal-id="error-minwidth" class="remodal">
+      <div class="popup-error">
+        <h3 class="center refusal-name">Минимальная ширина браузера</h3>
+        <p>Уважаемый пользователь, уведомляем Вас, <br> что ваш ширина браузера не достаточна для полноценного использования сайта.</p>
+        <div class="center"><a href="#" class="btn-orange-wide inline remodal-ok">Продолжить</a></div>
+      </div>
+    </div>
     <div id="shikarniy">
       <div class="sidebar">
         <div class="logo"><a href="main.html"> </a></div>
