--- a/site/main.html
+++ b/site/main.html
@@ -14,7 +14,6 @@
     <link href="css/sweet-alert.css" rel="stylesheet">
     <link href="css/lightbox.css" rel="stylesheet">
     <link href="css/jquery.remodal.css" rel="stylesheet">
-    <link href="css/lightSlider.css" rel="stylesheet">
     <link href="css/jquery.datetimepicker.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
@@ -22,9 +21,8 @@
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     <script src="js/lightbox.min.js" type="text/javascript"></script>
     <script src="js/jquery.remodal.js" type="text/javascript"></script>
-    <script src="js/jquery.lightSlider.min.js" type="text/javascript"></script>
+    <script src="js/jquery.bxslider.js" type="text/javascript"></script>
     <script src="js/jquery.datetimepicker.js" type="text/javascript"></script>
-    <script src="js/functions.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
   <body><!--[if lte IE 8]>
